--- a/ServiceDesk/Gateway/Views/Assets/GenericView.cshtml
+++ b/ServiceDesk/Gateway/Views/Assets/GenericView.cshtml
@@ -1,18 +1,43 @@
 ﻿@model IEnumerable<dynamic>
 @using Gateway.Helpers
 <div class="container">
-    <h1 class="text-center mb-4">Assets</h1>
+    <h1 class="text-center mb-4">Zasoby</h1>
+
+    @{
+        var excludedProperties = new List<string>
+    {
+    "Id", "Guid", "CreatedAt", "UpdatedAt", "CreatedBy", "UpdatedBy",
+    "EmailToId", "EmailToName", "EmailSubject", "EmailBody", // MailDto.cs
+    "DeviceType", "IsPortable", "Connectivity", // DeviceDto.cs
+    "CableType", "Length", "ConnectorType", "IsShielded", // CableDto.cs
+    "NumberOfUnits", "MaxWeight", "IsVentilated", "PowerCapacity", // RackDto.cs
+    "NumberOfPorts", "MaxPowerOutput", "IsManaged", "ConnectionType", // PDUDto.cs
+    "IsColor", "PrintSpeed", "PrinterType", "HasScanner", "PaperCapacity", // PrinterDto.cs
+    "ScreenSize", "Resolution", "PanelType", "IsCurved", "RefreshRate", // MonitorDto.cs
+    "PhoneNumber", "Carrier", "OperatingSystem", "StorageSize", "IsSmartphone", "IMEI", // PhoneDto.cs
+    "OperatingSystem", "RAMSize", "StorageSize", "Processor", "HasGraphicsCard", "GraphicsCardModel", // ComputerDto.cs
+    "PhoneNumber", "Carrier", "PlanType", "ActivationDate", "ExpiryDate", // SimcardDto.cs
+    "Version", "LicenseKey", "LicenseExpiryDate", "NumberOfUsers", "Vendor", // SoftwareDto.cs
+    "PurchaseDate", "PurchasePrice", "Technician", "Comment", "Discriminator", // AssetDto.cs
+    "AssetType", "Model", "Name" // AssetDto.cs
+    };
+
+        var modelType = Model?.FirstOrDefault()?.GetType();
+        var hasDiscriminator = modelType?.GetProperty("Discriminator") != null;
+        var discriminatorValue = ViewBag.Discriminator;
+    }
+
+    <div class="d-flex justify-content-end mb-3">
+        <a asp-action="Create" asp-route-type="@ViewBag.DtoType" class="btn btn-info btn-sm">Utwórz</a>
+    </div>
+
     @if (Model != null && Model.Any())
     {
-        var excludedProperties = new List<string> { "Id", "Guid", "CreatedAt", "UpdatedAt", "CreatedBy", "UpdatedBy" };
-        var modelType = Model.First().GetType();
-
         <div class="table-container">
-            <a asp-action="Create" asp-route-type="@item.Discriminator" class="btn btn-info btn-sm">Utwórz</a>
             <table class="table table-striped table-hover">
                 <thead class="thead-dark">
                     <tr>
-                        @foreach (var property in Model.First().GetType().GetProperties())
+                        @foreach (var property in modelType.GetProperties())
                         {
                             @if (!excludedProperties.Contains(property.Name))
                             {
@@ -32,7 +57,6 @@
                                     <td>@property.GetValue(item)</td>
                                 }
                             }
-
                             <td>
                                 @if (!string.IsNullOrEmpty(item.Discriminator))
                                 {
@@ -42,7 +66,7 @@
                                 {
                                     <a asp-action="Details" asp-route-id="@item.Guid" class="btn btn-info btn-sm">Szczegóły</a>
                                 }
-                            </td>       
+                            </td>
                         </tr>
                     }
                 </tbody>
@@ -51,6 +75,8 @@
     }
     else
     {
-        <p class="text-center">No assets available.</p>
+        <div class="table-container">
+            <p class="text-center">No assets available.</p>
+        </div>
     }
 </div>
