--- a/ServiceDesk/Gateway/Views/Ticket/ChangeStatus.cshtml
+++ b/ServiceDesk/Gateway/Views/Ticket/ChangeStatus.cshtml
@@ -1,31 +1,34 @@
-﻿@model Gateway.Storage.Dtos.StatusTicketDto
+@model Gateway.Storage.Dtos.StatusTicketDto
 
 @{
-    ViewData["Title"] = "ChangeStatus";
+    ViewData["Title"] = "Zmień status";
 }
 
-<h1>ChangeStatus</h1>
 
-<h4>StatusTicketDto</h4>
-
-<div class="col-md-4">
-    <form asp-action="ChangeStatus">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="Name" class="control-label"></label>
-            <select asp-for="Name" class="form-control">
-                <option value="New">New</option>
-                <option value="InProgress">In Progress</option>
-                <option value="Resolved">Resolved</option>
-            </select>
-            <span asp-validation-for="Name" class="text-danger"></span>
+<div class="container mt-4">
+    <h1 class="text-center">@ViewData["Title"]</h1>
+    <hr />
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <form asp-action="ChangeStatus">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label"></label>
+                    <select asp-for="Name" class="form-control">
+                        <option value="New">New</option>
+                        <option value="InProgress">In Progress</option>
+                        <option value="Resolved">Resolved</option>
+                    </select>
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group text-center">
+                    <input type="submit" value="Zapisz" class="btn btn-primary" />
+                </div>
+            </form>
+            <div class="text-center mt-4">
+                <a class="btn btn-secondary" asp-action="Index">Cofnij</a>
+            </div>
         </div>
-        <div class="form-group">
-            <input type="submit" value="Save" class="btn btn-primary" />
-        </div>
-    </form>
-    <div>
-        <a asp-action="Index">Back to List</a>
     </div>
 </div>
 
