--- a/ServiceDesk/Gateway/Views/Ticket/CreateNote.cshtml
+++ b/ServiceDesk/Gateway/Views/Ticket/CreateNote.cshtml
@@ -1,31 +1,30 @@
-﻿@model Gateway.Storage.Dtos.NoteDto
+@model Gateway.Storage.Dtos.NoteDto
 
 @{
-    ViewData["Title"] = "CreateNote";
+    ViewData["Title"] = "Dodaj notatkę";
 }
 
-<h1>CreateNote</h1>
-
-<h4>NoteDto</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="CreateNote">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
-                <span asp-validation-for="Content" class="text-danger"></span>
+<div class="container mt-4">
+    <h1 class="text-center">@ViewData["Title"]</h1>
+    <hr />
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <form asp-action="CreateNote">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Content" class="control-label">Opis</label>
+                    <input asp-for="Content" class="form-control" />
+                    <span asp-validation-for="Content" class="text-danger"></span>
+                </div>
+                <div class="form-group text-center">
+                    <input type="submit" value="Dodaj" class="btn btn-primary" />
+                </div>
+            </form>
+            <div class="text-center mt-4">
+                <a class="btn btn-secondary" asp-action="Index">Cofnij</a>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
