--- a/ServiceDesk/Gateway/Views/Ticket/DeleteNote.cshtml
+++ b/ServiceDesk/Gateway/Views/Ticket/DeleteNote.cshtml
@@ -1,27 +1,24 @@
-﻿@model Gateway.Storage.Dtos.NoteDto
+@model Gateway.Storage.Dtos.NoteDto
 
 @{
     ViewData["Title"] = "DeleteNote";
 }
 
-<h1>DeleteNote</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>NoteDto</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Content)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Content)
-        </dd>
-    </dl>
-    
-    <form asp-action="DeleteNote">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body text-center">
+                    <h3 class="card-title text-danger">Czy napewno chcesz usunąć?</h3>
+                    <form asp-action="DeleteNote">
+                        <input type="hidden" asp-for="Id" />
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <a class="btn btn-secondary ml-2" asp-action="Index">Cofnij</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+    
+  
