--- a/ServiceDesk/Gateway/Views/Ticket/Index.cshtml
+++ b/ServiceDesk/Gateway/Views/Ticket/Index.cshtml
@@ -1,59 +1,62 @@
-﻿@model IEnumerable<Gateway.Storage.Dtos.TicketDto>
+@model IEnumerable<Gateway.Storage.Dtos.TicketDto>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Zgłoszenia";
 }
 
-<h1>Index</h1>
+<div class="container mt-4">
+    <h1 class="text-center">@ViewData["Title"]</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StatusName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PriorityName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Requester)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Assignee)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StatusName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PriorityName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Requester)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Assignee)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+    <p class="text-right">
+        <a class="btn btn-success" asp-action="Create">Stwórz zgłoszenie</a>
+    </p>
+    <table class="table table-striped table-bordered">
+        <thead class="thead-dark">
+            <tr>
+                <th>
+                    Tytuł
+                </th>
+                <th>
+                    Status
+                </th>
+                <th>
+                    Priorytet
+                </th>
+                <th>
+                    Zgłaszający
+                </th>
+                <th>
+                    Przypisane do
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.StatusName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PriorityName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Requester)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Assignee)
+                    </td>
+                    <td>
+                        <a class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        <a class="btn btn-info btn-sm" asp-action="Details" asp-route-id="@item.Id">Szczegóły</a>
+                        <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">Usuń</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
