--- a/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,9 +1,12 @@
-﻿@model Gateway.Models.LoginModel
+@model Gateway.Models.LoginModel
 @{
     ViewData["Title"] = "Logowanie";
 }
-
-<
+<div class="container d-flex align-items-center justify-content-center vh-100">
+    <div class="row w-100">
+        <div class="col-md-6 offset-md-3">
+            <div class="card">
+                <div class="card-body">
                     <h2 class="card-title text-center mb-4">Zaloguj się</h2>
                     <form id="account" method="post" asp-controller="Auth" asp-action="Login">
                         <div asp-validation-summary="ModelOnly" class="text-danger mb-3" role="alert"></div>
@@ -24,7 +27,11 @@
                             <button id="login-submit" type="submit" class="btn btn-primary btn-lg">Zaloguj</button>
                         </div>
                     </form>
-  
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
