--- a/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ServiceDesk/Gateway/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿
+
 @model Gateway.Models.RegisterModel
 @{
     ViewData["Title"] = "Rejestracja";
@@ -6,11 +6,11 @@
 
 <h1>@ViewData["Title"]</h1>
 
- <div class="container d-flex align-items-center justify-content-center vh-100">
-    <div class="row">
-        <div class="col-md-8 col-lg-6 col-xl-4">
-            <div class="card shadow-lg rounded-3">
-                <div class="card-body p-4">
+<div class="container d-flex align-items-center justify-content-center vh-100">
+    <div class="row w-100">
+        <div class="col-md-6 offset-md-3">
+            <div class="card">
+                <div class="card-body">
                     <h2 class="card-title text-center mb-4">Stwórz nowe konto</h2>
                     <form asp-controller="Auth" asp-action="Register" method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger mb-3" role="alert"></div>
